--- a/send-message.yml
+++ b/send-message.yml
@@ -2,8 +2,8 @@ name: Send Telegram Message
 
 on:
   schedule:
-    - cron: '0 */4 * * *' # هر 4 ساعت
-  workflow_dispatch: # اجرای دستی
+    - cron: '0 */4 * * *'  # Every 4 hours
+  workflow_dispatch:
 
 jobs:
   send:
