--- a/main.yml
+++ b/main.yml
@@ -2,7 +2,7 @@ name: Send Telegram Message
 
 on:
   schedule:
-    - cron: '0 */4 * * *'  # Every 4 hours
+    - cron: '0 */4 * * *'
   workflow_dispatch:
 
 jobs:
